--- a/songs.html
+++ b/songs.html
@@ -248,7 +248,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 4: Look in My Eyes - Tower of Power
+          Week 5: Woo - Rihanna
         </h2>
         <div class="row">
           <div class="column">
@@ -258,15 +258,15 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 8.5/10</h2>
+            <h2 id="rating">Overall Rating: 7.8/10</h2>
             <h2>Listen Here</h2>
             <a
-              href="https://open.spotify.com/track/3xq9srnNN0LBvha15ZWpTU?si=cbc279935aa84a1e"
+              href="https://open.spotify.com/track/3HQcsqRjRdruUjkbDSgmVF?si=e28bb72248464c47"
               target="_blank"
               ><h3><center>Spotify</center></h3></a
             >
             <a
-              href="https://www.youtube.com/watch?v=YAfe2RGWmtc"
+              href="https://www.youtube.com/watch?v=i0S40arGfCQ"
               target="_blank"
               ><h3><center>Youtube</center></h3></a
             >
@@ -284,37 +284,38 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              SAXOPHONE. I mean there really aren't too many lyrics to this
-              song, just listen to Tom Politzer play his sax. It's that simple.
+              In the second chrous, listen for a few descending rolls of hi-hats
+              in the background. Almost robotic sounding.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              A lot of songs filled my ears this week, and adopting a favorite
-              was grueling. I chose this song due to the band's geographic
-              relevance to be completely honest. That being said, this song is
-              so suave, scrumptious, and ultimately unanalyzable that you must
-              give it a listen.
+              Coming from one of my favorite pop/r&b albums of the 21st century,
+              this dirge-y breakup anthem has taken the top spot for this week.
+              The lyrics of this song can get lost within the jumble of deep,
+              soulful percussion and the crowing of Travis Scott in the
+              bakcground, however, this song is less about lyrics for me and
+              more about the overall sound. Give this a listen ideally at night.
             </p>
           </div>
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Jack Garbe: DUCKWORTH. - Kendrick Lamar
+            Elijah: Surefire - Wilderado
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 8.8/10</h2>
+              <h2 id="rating">Overall Rating: 9.0/10</h2>
             </div>
             <div class="column">
               <h2>Listen Here</h2>
               <a
-                href="https://open.spotify.com/track/0y9uTzK9cNKSAEHnpeRG8C?si=0040e7b15e614898"
+                href="https://open.spotify.com/track/6iWvETAILWAYOdm2DioSEF?si=d461c8d166d34f2a"
                 target="_blank"
                 ><h3><center>Spotify</center></h3></a
               >
               <a
-                href="https://www.youtube.com/watch?v=Dm-foWGDBF0"
+                href="https://www.youtube.com/watch?v=vOZlJyc6Hlc"
                 target="_blank"
                 ><h3><center>Youtube</center></h3></a
               >
@@ -322,15 +323,9 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            This song is one of many examples as to why Kendrick’s storytelling
-            is the best of all time. His ability to create a track that has a
-            complex meaning, while also allowing for a casual listen is truly an
-            art. He deliberately places this song at the end of his 2017 album,
-            DAMN, where he walks us through his toughest life lessons. DUCKWORTH
-            wraps up the theme of the album by illustrating a day through
-            Kendrick’s father’s perspective that led to a change in perspective
-            for Kendrick. A beautiful song on an even more beautiful album, I
-            highly recommend.
+            This song feels very summery and breezy to me, which I like. The
+            chorus is super catchy and has a very happy, beaming sound to it.
+            Play this song if you’re driving fast on a sunny day!
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -355,6 +350,11 @@
               <td>3</td>
               <td>Lisa Sawyer - Leon Bridges</td>
               <td>9.3/10</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>Look in My Eyes - Tower of Power</td>
+              <td>8.5/10</td>
             </tr>
           </table>
         </div>
