--- a/songs.html
+++ b/songs.html
@@ -248,7 +248,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 5: Woo - Rihanna
+          Week 6: United in Grief - Kendrick Lamar
         </h2>
         <div class="row">
           <div class="column">
@@ -258,18 +258,29 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 7.8/10</h2>
+            <h2 id="rating">Overall Rating: 9.5/10</h2>
             <h2>Listen Here</h2>
             <a
-              href="https://open.spotify.com/track/3HQcsqRjRdruUjkbDSgmVF?si=e28bb72248464c47"
+              href="https://open.spotify.com/track/5Gt9bxniM1SxN61yRzRhXL?si=ff8846d346f043cd"
               target="_blank"
               ><h3><center>Spotify</center></h3></a
             >
             <a
-              href="https://www.youtube.com/watch?v=i0S40arGfCQ"
+              href="https://www.youtube.com/watch?v=tvNSXS4x9nc"
               target="_blank"
               ><h3><center>Youtube</center></h3></a
             >
+            <div id="newFeature" hidden>
+              <h2>Do you like this song?</h2>
+              <div class="row">
+                <div class="column">
+                  <center><button></button></center>
+                </div>
+                <div class="column">
+                  <center><button></button></center>
+                </div>
+              </div>
+            </div>
             <br /><br />
             <div class="button" id="emailButton">
               <button
@@ -284,21 +295,23 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              In the second chrous, listen for a few descending rolls of hi-hats
-              in the background. Almost robotic sounding.
+              The chorale-like voices in the very beginning, followed by
+              Kendrick's monotonous introduction, has me electrified every time
+              I listen to this song, and every time I start this album.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Coming from one of my favorite pop/r&b albums of the 21st century,
-              this dirge-y breakup anthem has taken the top spot for this week.
-              The lyrics of this song can get lost within the jumble of deep,
-              soulful percussion and the crowing of Travis Scott in the
-              bakcground, however, this song is less about lyrics for me and
-              more about the overall sound. Give this a listen ideally at night.
+              This song is a beautiful, offbeat return of the esteemed Kendrick
+              Lamar. He takes us down a windy, unpaved road full of cultural
+              trauma in which he is leanring to heal. Through an amalgamation of
+              beat, flow, and tempo changes, it feels like the song itself needs
+              further assembly. It's a masterful thematic arangement for the
+              album that follows. On its own its great, but please enjoy it
+              along with the rest of the project.
             </p>
           </div>
         </div>
-        <div id="celebSotW">
+        <div id="celebSotW" hidden>
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
             Elijah: Surefire - Wilderado
@@ -355,6 +368,11 @@
               <td>4</td>
               <td>Look in My Eyes - Tower of Power</td>
               <td>8.5/10</td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>Woo - Rihanna</td>
+              <td>7.8/10</td>
             </tr>
           </table>
         </div>
