--- a/songs.html
+++ b/songs.html
@@ -303,11 +303,11 @@
             <p id="overall">
               This song is a beautiful, offbeat return of the esteemed Kendrick
               Lamar. He takes us down a windy, unpaved road full of cultural
-              trauma in which he is leanring to heal. Through an amalgamation of
-              beat, flow, and tempo changes, it feels like the song itself needs
-              further assembly. It's a masterful thematic arangement for the
-              album that follows. On its own its great, but please enjoy it
-              along with the rest of the project.
+              trauma with which he is learning to heal. Through an amalgamation
+              of beat, flow, and tempo changes, it feels like the song itself
+              needs further assembly. It's a masterful thematic arrangement for
+              the album that follows. It's impressive on its own, but please
+              enjoy it along with the rest of the project.
             </p>
           </div>
         </div>
