commit for testing

--- a/songs.html
+++ b/songs.html
@@ -274,10 +274,21 @@
               <h2>Do you like this song?</h2>
               <div class="row">
                 <div class="column">
-                  <center><button></button></center>
+                  <center>
+                    <button type="button" id="like" onclick="handleLike()">
+                      Yes !!
+                    </button>
+                  </center>
                 </div>
                 <div class="column">
-                  <center><button></button></center>
+                  <center>
+                    <button type="button" id="meh" onclick="">Meh ..</button>
+                  </center>
+                </div>
+                <div class="column">
+                  <center>
+                    <button type="button" id="hate" onclick="">Nah :(</button>
+                  </center>
                 </div>
               </div>
             </div>
