--- a/songs.html
+++ b/songs.html
@@ -248,7 +248,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 6: United in Grief - Kendrick Lamar
+          Week 7: BALD! - JPEGMAFIA
         </h2>
         <div class="row">
           <div class="column">
@@ -258,15 +258,15 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 9.5/10</h2>
+            <h2 id="rating">Overall Rating: 8.7/10</h2>
             <h2>Listen Here</h2>
             <a
-              href="https://open.spotify.com/track/5Gt9bxniM1SxN61yRzRhXL?si=ff8846d346f043cd"
+              href="https://open.spotify.com/track/5MelFaia7UyOxn3Xkhcunf?si=6e75570c83414e54"
               target="_blank"
               ><h3><center>Spotify</center></h3></a
             >
             <a
-              href="https://www.youtube.com/watch?v=tvNSXS4x9nc"
+              href="https://www.youtube.com/watch?v=pDvtfJMPSr8"
               target="_blank"
               ><h3><center>Youtube</center></h3></a
             >
@@ -306,40 +306,40 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The chorale-like voices in the very beginning, followed by
-              Kendrick's monotonous introduction, has me electrified every time
-              I listen to this song, and every time I start this album.
+              JPEGMAFIA, who I will from now on be now referring to as Peggy,
+              says "BALD" three times within this song. While they are all
+              extremely pleasing to the ear, the last "BALD" is so reverberant
+              and real to me. It is my favorite part of the song and indeed the
+              last lyric of this track.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              This song is a beautiful, offbeat return of the esteemed Kendrick
-              Lamar. He takes us down a windy, unpaved road full of cultural
-              trauma with which he is learning to heal. Through an amalgamation
-              of beat, flow, and tempo changes, it feels like the song itself
-              needs further assembly. It's a masterful thematic arrangement for
-              the album that follows. It's impressive on its own, but please
-              enjoy it along with the rest of the project.
+              While not lyrically intricate or astute (this is plainly a song
+              about his unfortunate hairline), BALD! is still very exciting.
+              Peggy is a master of accreting his beats into a conglomeration of
+              samples, percussion, and random sounds; He makes it work every
+              time, this song included.
             </p>
           </div>
         </div>
-        <div id="celebSotW" hidden>
+        <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Elijah: Surefire - Wilderado
+            Mackenzie: You the One Fish in the Sea - Liv.e
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 9.0/10</h2>
+              <h2 id="rating">Overall Rating: 9.5/10</h2>
             </div>
             <div class="column">
               <h2>Listen Here</h2>
               <a
-                href="https://open.spotify.com/track/6iWvETAILWAYOdm2DioSEF?si=d461c8d166d34f2a"
+                href="https://open.spotify.com/track/2NKI38xfdu7OQV7CFXUNKv?si=e14b72e35eb946a0"
                 target="_blank"
                 ><h3><center>Spotify</center></h3></a
               >
               <a
-                href="https://www.youtube.com/watch?v=vOZlJyc6Hlc"
+                href="https://www.youtube.com/watch?v=ygqLIuDYFF0"
                 target="_blank"
                 ><h3><center>Youtube</center></h3></a
               >
@@ -347,9 +347,13 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            This song feels very summery and breezy to me, which I like. The
-            chorus is super catchy and has a very happy, beaming sound to it.
-            Play this song if you’re driving fast on a sunny day!
+            What an awesome song! I’ve been very much enjoying it for a while
+            now and it’s become one of my favorites. It reminds me of older jazz
+            rap in the sense that the music is somewhat repetitive, but in a way
+            where the artist manages to put a really unique and interesting spin
+            on it. Liv.e’s voice is so pretty and she’s such a cool person in
+            general (take a look at her Instagram). I would highly recommend the
+            rest of the album as well:)
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -385,11 +389,16 @@
               <td>Woo - Rihanna</td>
               <td>7.8/10</td>
             </tr>
+            <tr>
+              <td>6</td>
+              <td>United in Grief - Kendrick Lamar</td>
+              <td>9.5/10</td>
+            </tr>
           </table>
         </div>
       </div>
     </div>
-    <script src="updateSotw.js"></script>
+    <script src="background.js"></script>
     <div id="buttonPopup" hidden>
       <div id="overlay"></div>
       <div id="popup">
