--- a/songs.html
+++ b/songs.html
@@ -248,7 +248,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 7: BALD! - JPEGMAFIA
+          Week 8: Unbothered - Omar Apollo
         </h2>
         <div class="row">
           <div class="column">
@@ -258,15 +258,15 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 8.7/10</h2>
+            <h2 id="rating">Overall Rating: 8.2/10</h2>
             <h2>Listen Here</h2>
             <a
-              href="https://open.spotify.com/track/5MelFaia7UyOxn3Xkhcunf?si=6e75570c83414e54"
+              href="https://open.spotify.com/track/4p1Er46wDz4zGQI7Sxor3W?si=675ec49a1a6440cf"
               target="_blank"
               ><h3><center>Spotify</center></h3></a
             >
             <a
-              href="https://www.youtube.com/watch?v=pDvtfJMPSr8"
+              href="https://www.youtube.com/watch?v=vKWaKiml1XA"
               target="_blank"
               ><h3><center>Youtube</center></h3></a
             >
@@ -306,40 +306,40 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              JPEGMAFIA, who I will from now on be now referring to as Peggy,
-              says "BALD" three times within this song. While they are all
-              extremely pleasing to the ear, the last "BALD" is so reverberant
-              and real to me. It is my favorite part of the song and indeed the
-              last lyric of this track.
+              The electric guitar in the background adds a pronounced edge that
+              this song would be flat and dull without. Omar hits some very
+              pretty notes in the limited amount of lyrics tethered to this
+              track, which are always pleasant to the ear :)
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              While not lyrically intricate or astute (this is plainly a song
-              about his unfortunate hairline), BALD! is still very exciting.
-              Peggy is a master of accreting his beats into a conglomeration of
-              samples, percussion, and random sounds; He makes it work every
-              time, this song included.
+              One of the earlier singles from Omar Apollo, it's a short, simple,
+              and delicate song, and I like it for each of those reasons. It's a
+              rainy day both where and when I'm writing this review. I can't
+              think of a more rainy-day-incoming-fall style song than this one.
+              If you want more of Mr. Apollo, his freshest album is a great
+              listen. Enjoy your Sunday however it may be.
             </p>
           </div>
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Mackenzie: You the One Fish in the Sea - Liv.e
+            Anthony: R.I.P SCREW - Travis Scott
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 9.5/10</h2>
+              <h2 id="rating">Overall Rating: 9/10</h2>
             </div>
             <div class="column">
               <h2>Listen Here</h2>
               <a
-                href="https://open.spotify.com/track/2NKI38xfdu7OQV7CFXUNKv?si=e14b72e35eb946a0"
+                href="https://open.spotify.com/track/4SZepBIPDRwPaHIjAKwRDb?si=fe9fcb42cba04e4d"
                 target="_blank"
                 ><h3><center>Spotify</center></h3></a
               >
               <a
-                href="https://www.youtube.com/watch?v=ygqLIuDYFF0"
+                href="https://www.youtube.com/watch?v=oBOmHWo14Xk"
                 target="_blank"
                 ><h3><center>Youtube</center></h3></a
               >
@@ -347,13 +347,13 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            What an awesome song! I’ve been very much enjoying it for a while
-            now and it’s become one of my favorites. It reminds me of older jazz
-            rap in the sense that the music is somewhat repetitive, but in a way
-            where the artist manages to put a really unique and interesting spin
-            on it. Liv.e’s voice is so pretty and she’s such a cool person in
-            general (take a look at her Instagram). I would highly recommend the
-            rest of the album as well:)
+            R.I.P. SCREW is a very vibey and laid-back song that discusses heavy
+            subject matter. The track is dedicated to the late DJ Screw, a
+            Houston hip-hop icon who died of a codeine overdose. It features
+            Swae Lee with an amazing verse, Travis dropping some freestyle bars,
+            and interview clips about Screw and his influence. I would highly
+            recommend listening to this song if you want to relax and enjoy a
+            chill hip-hop song.
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -393,6 +393,11 @@
               <td>6</td>
               <td>United in Grief - Kendrick Lamar</td>
               <td>9.5/10</td>
+            </tr>
+            <tr>
+              <td>7</td>
+              <td>BALD! - JPEGMAFIA</td>
+              <td>8.7/10</td>
             </tr>
           </table>
         </div>
