--- a/songs.html
+++ b/songs.html
@@ -248,7 +248,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 8: Unbothered - Omar Apollo
+          Week 9: Songs for Women - Frank Ocean
         </h2>
         <div class="row">
           <div class="column">
@@ -258,15 +258,16 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating: 8.2/10</h2>
+            <h2 id="rating">Overall Rating: 9.4/10</h2>
             <h2>Listen Here</h2>
             <a
               href="https://open.spotify.com/track/4p1Er46wDz4zGQI7Sxor3W?si=675ec49a1a6440cf"
               target="_blank"
+              hidden
               ><h3><center>Spotify</center></h3></a
             >
             <a
-              href="https://www.youtube.com/watch?v=vKWaKiml1XA"
+              href="https://www.youtube.com/watch?v=1vpeQEKDpKQ"
               target="_blank"
               ><h3><center>Youtube</center></h3></a
             >
@@ -306,40 +307,51 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The electric guitar in the background adds a pronounced edge that
-              this song would be flat and dull without. Omar hits some very
-              pretty notes in the limited amount of lyrics tethered to this
-              track, which are always pleasant to the ear :)
+              I indeed have a favorite verse/stanza from this song and it is as
+              follows (second chorus): "And every time a n**** ask if I sing
+              songs to get at women, I say nah, he said: 'who do you think
+              you're kidding, I know you, you stole my girlfriend.'" This line
+              concludes the little narrative that Frank tells throughout the
+              song, and is a pretty enjoyable conclusion at that.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              One of the earlier singles from Omar Apollo, it's a short, simple,
-              and delicate song, and I like it for each of those reasons. It's a
-              rainy day both where and when I'm writing this review. I can't
-              think of a more rainy-day-incoming-fall style song than this one.
-              If you want more of Mr. Apollo, his freshest album is a great
-              listen. Enjoy your Sunday however it may be.
+              *DISCLAIMER* Please don't get too attached to this song like I
+              have, it is not on ANY mainstream music streaming services.
+              <br /><br />
+              The production of this song alone makes this track worth plentiful
+              praise, but what sets it apart from all the other amazing tracks
+              on this mixtape is the attractive story-telling within. I'm not
+              going to outline the story here, you can perceive it for yourself,
+              but take notes of it while appreciating the equally impressive
+              production. If you need more of this mixtape, I will put a link to
+              my favorite place to listen to it (it is very good), but mind the
+              disclaimer, it truly is a slippery slope.<a
+                href="https://mixtapemonkey.com/54/frank-ocean-nostalgia-ultra"
+                target="_blank"
+                ><h3><center>Nostalgia Ultra Mixtape</center></h3></a
+              >
             </p>
           </div>
         </div>
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Anthony: R.I.P SCREW - Travis Scott
+            Ayla: Me vs. The World - Rod Wave
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating: 9/10</h2>
+              <h2 id="rating">Overall Rating: 9.0/10</h2>
             </div>
             <div class="column">
               <h2>Listen Here</h2>
               <a
-                href="https://open.spotify.com/track/4SZepBIPDRwPaHIjAKwRDb?si=fe9fcb42cba04e4d"
+                href="https://open.spotify.com/track/2DgUMMxXxWbCxEK55KUIfx?si=052d31cf2cb24c72"
                 target="_blank"
                 ><h3><center>Spotify</center></h3></a
               >
               <a
-                href="https://www.youtube.com/watch?v=oBOmHWo14Xk"
+                href="https://www.youtube.com/watch?v=UXHkn9rx4Xk"
                 target="_blank"
                 ><h3><center>Youtube</center></h3></a
               >
@@ -347,13 +359,11 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            R.I.P. SCREW is a very vibey and laid-back song that discusses heavy
-            subject matter. The track is dedicated to the late DJ Screw, a
-            Houston hip-hop icon who died of a codeine overdose. It features
-            Swae Lee with an amazing verse, Travis dropping some freestyle bars,
-            and interview clips about Screw and his influence. I would highly
-            recommend listening to this song if you want to relax and enjoy a
-            chill hip-hop song.
+            Although this artist might not fit the usual taste of mine, his
+            vocals and lyricism have had me hooked for weeks. This song
+            describes Rod Wave’s experience in gang life and how he has used
+            music to escape. His lyrics and flow carry the heavy subject matter
+            beautifully. I hope you’ll enjoy this song as much as I have :)
           </p>
         </div>
         <div class="divider"><center>Song of the Week Archive</center></div>
@@ -398,6 +408,11 @@
               <td>7</td>
               <td>BALD! - JPEGMAFIA</td>
               <td>8.7/10</td>
+            </tr>
+            <tr>
+              <td>8</td>
+              <td>Unbothered - Omar Apollo</td>
+              <td>8.2/10</td>
             </tr>
           </table>
         </div>
