--- a/songs.html
+++ b/songs.html
@@ -251,7 +251,7 @@
           Week 9: Songs for Women - Frank Ocean
         </h2>
         <div class="row">
-          <div class="column">
+          <div class="column" id="leftColumn">
             <img
               id="imgSrc"
               src="images/sotw.png"
